--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "date-fns": "^2.30.0",
     "framer-motion": "^11.11.17",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.17.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
