--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.5",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^11.11.17",
     "lodash.debounce": "^4.0.8",
@@ -18,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.13.1",
+    "tailwind-merge": "^3.0.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
