--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "no-explicit-any": 0,
+    "typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-explicit-any": "off"
+  }
 }
