--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.8",
     "@pbe/react-yandex-maps": "^1.2.5",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -19,7 +22,9 @@
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.13.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.1",
     "zustand": "^5.0.1"
   },
